archives/unused/02-dr-medplum-service-istio-mutual.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-medplum-service-istio-mutual
  namespace: medplum
spec:
  host: medplum-service.medplum.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
