archives/unused/-authz-grafana.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authz-grafana-allow
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: grafana
  action: ALLOW
  rules:

  - from:
    - source:
        principals:
        - cluster.local/ns/monitoring/prometheus-prometheus
    to:
    - operation:
        ports: ["9090"]
