archives/unused/07-pompetrack-core-allow-minio-init-to-minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-minio-init-egress-to-minio
  namespace: pompetrack-core
spec:
  podSelector:
    matchLabels:
      job-name: minio-init
  policyTypes: ["Egress"]
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: minio 
    ports:
    - protocol: TCP
      port: 9000
