archives/unused/13-prometheus-egress-monitoring-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-egress-monitoring-metrics
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes: ["Egress"]
  egress:
  - to:
    - podSelector: {} # tous les pods du namespace monitoring
    ports:
    - protocol: TCP
      port: 10250
    - protocol: TCP
      port: 9153
    - protocol: TCP
      port: 9100
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 3000
