archives/unused/14-allow-metrics-from-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metrics-from-prometheus
  namespace: monitoring
spec:
  podSelector: {}       # ou sélectionner seulement tes pods exposant /metrics
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - protocol: TCP
      port: 10250
    - protocol: TCP
      port: 9153
    - protocol: TCP
      port: 9100
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 3000
