archives/unused/test_prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-plumbing-intra-namespace
  namespace: monitoring
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 9090
  egress:
    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 9090
